--- a/ConfigurationInitializer.ServiceFabric/ConfigurationInitializer.ServiceFabric.nuspec
+++ b/ConfigurationInitializer.ServiceFabric/ConfigurationInitializer.ServiceFabric.nuspec
@@ -18,4 +18,8 @@
       <dependency id="Microsoft.ServiceFabric" version="6.0.0" />
     </dependencies>
   </metadata>
+  <files>
+    <file src=".\bin\Release\**\*.dll" target="lib" />
+    <file src=".\bin\Release\**\*.config" target="lib" />
+  </files>
 </package>
